fixed username default not showing, fixed styling for thoughts, thought-container

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -115,6 +115,17 @@ p {
   margin: 0;
 }
 
+.thought-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.thought {
+  max-width: 380px;
+}
+
 .thought-message {
   font-family: 'Roboto Mono', monospace;
   font-weight: 500;
